--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Boiler Shop</title>
     <link rel="stylesheet" href="/index.css" />
+    <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0uqIdzECBbi5oNM-mwskSwN6lFNC4gyE&libraries=places"></script>
   </head>
   <body>
     <div>
-    <div id="app"></div>
-    <script async defer src="/bundle.js"></script>
+      <div id="app"></div>
+
+      <script async defer src="/bundle.js"></script>
+
   </body>
 </html>
