added chuckNorris and number facts with pics

--- a/public/index.html
+++ b/public/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-
+      <link rel="stylesheet" href="/index.css" />
+      <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key= AIzaSyA6bxXNJtg2TIzmtLHFxuSbyJeD-b0xrhA&libraries=places"></script>
+      <script defer src="https://cdnjs.cloudflare.com/ajax/libs/skycons/1396634940/skycons.min.js"></script>
+      <script defer src="script.js"></script>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Boiler Shop</title>
-    <link rel="stylesheet" href="/index.css" />
-    <script defer type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyD0uqIdzECBbi5oNM-mwskSwN6lFNC4gyE&libraries=places"></script>
   </head>
   <body>
     <div>
       <div id="app"></div>
-
       <script async defer src="/bundle.js"></script>
-
   </body>
 </html>
